// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["driverAdapters"]
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserRole {
  ADMIN
  TEACHER
  STUDENT
}

enum ExamStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

enum AttemptStatus {
  IN_PROGRESS
  SUBMITTED
  GRADED
}

enum NotificationType {
  EXAM_CREATED
  EXAM_UPDATED
  EXAM_REMINDER
  EXAM_STARTED
  EXAM_ENDING
  EXAM_ENDED
  MESSAGE_RECEIVED
  SUSPICIOUS_ACTIVITY
  TAB_SWITCH_WARNING
  SCREEN_SHARING_DETECTED
  COPY_PASTE_ATTEMPT
  IP_VIOLATION
  FINGERPRINT_MISMATCH
  SYSTEM
  GRADE_PUBLISHED
  ATTEMPT_SUBMITTED
}

enum NotificationChannel {
  IN_APP
  EMAIL
  PUSH
}

enum NotificationPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

model User {
  id        String   @id @default(uuid())
  username  String   @unique
  password  String
  email     String?  @unique
  name      String
  role      UserRole @default(STUDENT)
  courses   String[] @default([]) // Danh sách lớp (ví dụ: ["CSE301", "CSE302"]) - DEPRECATED: Use coursesEnrolled instead
  isActive  Boolean  @default(true)
  
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  createdExams             Exam[]                    @relation("ExamCreator")
  attempts                 Attempt[]
  notifications            Notification[]
  notificationPreference   NotificationPreference?
  sentMessages             Message[]                 @relation("MessageSender")
  receivedMessages         Message[]                 @relation("MessageReceiver")
  coursesEnrolled          CourseEnrollment[]        @relation("UserEnrollments")
  
  @@map("users")
}

model Exam {
  id             String     @id @default(uuid())
  title          String
  description    String?
  subject        String
  duration       Int        // in minutes
  passingScore   Int        @default(60)
  maxAttempts    Int?       // Số lần được làm lại (null = không giới hạn)
  status         ExamStatus @default(DRAFT)
  allowedCourses String?    // Danh sách lớp được phép làm bài (ví dụ: "CSE301,CSE302")
  
  startTime   DateTime?
  endTime     DateTime?
  
  createdById String
  createdBy   User      @relation("ExamCreator", fields: [createdById], references: [id])
  
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  
  // Relations
  questions     Question[]
  attempts      Attempt[]
  notifications Notification[]
  
  @@map("exams")
}

model Question {
  id       String  @id @default(uuid())
  question String
  type     String  @default("multiple-choice") // multiple-choice, true-false, essay
  points   Int     @default(10)
  order    Int     @default(0)
  
  examId   String
  exam     Exam    @relation(fields: [examId], references: [id], onDelete: Cascade)
  
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  options  QuestionOption[]
  answers  Answer[]
  
  @@map("questions")
}

model QuestionOption {
  id         String  @id @default(uuid())
  option     String
  isCorrect  Boolean @default(false)
  order      Int     @default(0)
  
  questionId String
  question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)
  
  @@map("question_options")
}

model Attempt {
  id            String        @id @default(uuid())
  status        AttemptStatus @default(IN_PROGRESS)
  score         Float?
  attemptNumber Int           @default(1) // Lần làm bài thứ mấy
  startedAt     DateTime      @default(now())
  submittedAt   DateTime?
  timeSpent     Int?          // in seconds
  
  studentId     String
  student       User          @relation(fields: [studentId], references: [id])
  
  examId        String
  exam          Exam          @relation(fields: [examId], references: [id], onDelete: Cascade)
  
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
  
  // Relations
  answers       Answer[]
  
  @@map("attempts")
}

model Answer {
  id              String   @id @default(uuid())
  selectedOption  String?  // ID của option được chọn
  answerText      String?  // Cho câu trả lời tự luận
  isCorrect       Boolean  @default(false)
  points          Float    @default(0)
  
  attemptId       String
  attempt         Attempt  @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  
  questionId      String
  question        Question @relation(fields: [questionId], references: [id], onDelete: Cascade)
  
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  
  @@unique([attemptId, questionId])
  @@map("answers")
}

model Notification {
  id        String                @id @default(uuid())
  userId    String
  user      User                  @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  type      NotificationType
  priority  NotificationPriority  @default(MEDIUM)
  title     String
  message   String
  
  // Delivery channels
  channels  NotificationChannel[] @default([IN_APP])
  
  // Related entities
  examId    String?               // Optional: link to exam if notification is about an exam
  exam      Exam?                 @relation(fields: [examId], references: [id], onDelete: Cascade)
  
  attemptId String?               // Optional: link to attempt
  
  // Additional data (JSON field for flexible data storage)
  metadata  Json?
  
  // Status tracking
  isRead    Boolean               @default(false)
  readAt    DateTime?
  
  // Delivery tracking
  sentViaEmail Boolean            @default(false)
  sentViaPush  Boolean            @default(false)
  emailSentAt  DateTime?
  pushSentAt   DateTime?
  
  createdAt DateTime              @default(now())
  updatedAt DateTime              @updatedAt
  
  @@map("notifications")
  @@index([userId, isRead])
  @@index([userId, type])
  @@index([createdAt])
}

model NotificationPreference {
  id                    String                  @id @default(uuid())
  userId                String                  @unique
  user                  User                    @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Channel preferences
  enableInApp           Boolean                 @default(true)
  enableEmail           Boolean                 @default(true)
  enablePush            Boolean                 @default(false)
  
  // Type preferences (which notification types to receive)
  examCreated           Boolean                 @default(true)
  examUpdated           Boolean                 @default(true)
  examReminder          Boolean                 @default(true)
  examStarted           Boolean                 @default(true)
  examEnding            Boolean                 @default(true)
  examEnded             Boolean                 @default(true)
  messageReceived       Boolean                 @default(true)
  suspiciousActivity    Boolean                 @default(true)
  tabSwitchWarning      Boolean                 @default(true)
  screenSharingDetected Boolean                 @default(true)
  copyPasteAttempt      Boolean                 @default(true)
  ipViolation           Boolean                 @default(true)
  fingerprintMismatch   Boolean                 @default(true)
  system                Boolean                 @default(true)
  gradePublished        Boolean                 @default(true)
  attemptSubmitted      Boolean                 @default(true)
  
  // Email digest preferences
  emailDigestEnabled    Boolean                 @default(false)
  emailDigestFrequency  String                  @default("DAILY") // REALTIME, DAILY, WEEKLY
  
  createdAt             DateTime                @default(now())
  updatedAt             DateTime                @updatedAt
  
  @@map("notification_preferences")
}

model NotificationTemplate {
  id          String               @id @default(uuid())
  type        NotificationType     @unique
  
  // In-app notification template
  titleTemplate   String
  messageTemplate String
  
  // Email template
  emailSubject    String?
  emailBody       String?           // HTML or plain text
  
  // Push notification template
  pushTitle       String?
  pushBody        String?
  
  // Template variables (JSON array of available variables)
  variables       Json?
  
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  
  @@map("notification_templates")
}

model Message {
  id         String   @id @default(uuid())
  
  senderId   String
  sender     User     @relation("MessageSender", fields: [senderId], references: [id], onDelete: Cascade)
  
  receiverId String
  receiver   User     @relation("MessageReceiver", fields: [receiverId], references: [id], onDelete: Cascade)
  
  content    String
  isRead     Boolean  @default(false)
  
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  
  @@map("messages")
  @@index([senderId, receiverId])
  @@index([receiverId, isRead])
}

model Course {
  id          String   @id @default(uuid())
  code        String   @unique // CSE301, CSE302, etc.
  name        String   // Lập trình Web, Cơ sở dữ liệu, etc.
  description String?
  isActive    Boolean  @default(true)
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  
  // Relations
  enrollments CourseEnrollment[]
  
  @@map("courses")
}

model CourseEnrollment {
  id        String   @id @default(uuid())
  
  userId    String
  user      User     @relation("UserEnrollments", fields: [userId], references: [id], onDelete: Cascade)
  
  courseId  String
  course    Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)
  
  enrolledAt DateTime @default(now())
  
  @@unique([userId, courseId])
  @@map("course_enrollments")
  @@index([userId])
  @@index([courseId])
}
